Fix gap under recently visited section header

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -230,6 +230,8 @@ html {
 
             .items {
 
+                padding-top: 5px;
+
                 .bookmark-item,
                 .history-item {
 
